Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti72:2.1": "Ci sono queste tre vie d’uscita da uno stato. ",
+  "iti72:2.1": "Cercatori, ci sono queste tre vie d’uscita da uno stato. ",
   "iti72:2.2": "Quali tre? ",
   "iti72:2.3": "La via d’uscita dai piaceri dei sensi, ovvero la rinuncia; la via d’uscita dalla materialità, ovvero l’immateriale; la via d’uscita dall’originato, dal creato e dall’origine dipendente delle cose, ovvero la cessazione. ",
   "iti72:3.1": "Avendo conosciuto la via d’uscita dai piaceri dei sensi ",
