Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti72:2.1": "Cercatori, ci sono queste tre vie di fuga. ",
   "iti72:2.2": "Quali tre? ",
-  "iti72:2.3": "La via di fuga (d’uscita) dai piaceri dei sensi, ovvero la rinuncia; la via di fuga (d’uscita) dalle forme, ovvero l’amorfo [dalla materialità, ovvero l’immateriale (dalle forme fisiche, ovvero l’immaterialità / amorfo)]; la via di fuga (d’uscita) dal qualsiasi cosa che è venuta in essere, creata, sorta in dipendenza, ovvero la cessazione. ",
+  "iti72:2.3": "La via di fuga (d’uscita) dai piaceri dei sensi, ovvero la rinuncia; la via di fuga (d’uscita) dalle forme, ovvero l’amorfo [dalla materialità, ovvero l’immateriale (dalle forme fisiche, ovvero l’immaterialità / amorfo)]; la via di fuga (d’uscita) da qualsiasi cosa che è venuta in essere, creata, sorta in dipendenza, ovvero la cessazione. ",
   "iti72:3.1": "Avendo conosciuto la via di fuga (d’uscita) dai piaceri dei sensi ",
   "iti72:3.2": "e trascendendo la materialità, ",
   "iti72:3.3": "chi è ardente tocca/sperimenta sempre ",
