--- a/translation/de/sabbamitta/sutta/sn/sn3/sn3.11_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn3/sn3.11_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "sn3.11:2.4": "Ich bin Pasenadi, der König von Kosala!“ ",
   "sn3.11:3.1": "Und kurz nachdem die Asketen weggegangen waren, ging König Pasenadi zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
   "sn3.11:3.2": "„Herr, gehören sie zu denen in der Welt, die vollendet oder auf dem Pfad zur Vollendung sind?“ ",
-  "sn3.11:4.1": "„Großer König, als Laie, der Sinnenfreuden genießt, zu Hause mit seinen Kindern lebt, Sandelholz aus Kāsi benutzt, Kränze, Düfte und Make-up trägt und Gold und Zahlungsmittel annimmt, ist es schwer für dich, zu wissen, wer vollendet oder auf dem Pfad zur Vollendung ist. ",
+  "sn3.11:4.1": "„Großer König, als Laie, der Sinnenfreuden genießt, in seinem Haus voller Kinder lebt, Sandelholz aus Kāsi benutzt, Kränze, Düfte und Make-up trägt und Gold und Zahlungsmittel annimmt, ist es schwer für dich, zu wissen, wer vollendet oder auf dem Pfad zur Vollendung ist. ",
   "sn3.11:5.1": "Die Sittlichkeit eines Menschen kann man erkennen, wenn man mit ihm zusammenlebt – aber nur über einen langen Zeitraum, nicht beiläufig; nur, wenn man den Geist gebraucht, nicht, wenn man ihn nicht gebraucht; und nur die Weisen können es, nicht die Geistlosen. ",
   "sn3.11:5.2": "Die Reinheit eines Menschen kann man erkennen, wenn man mit ihm Umgang pflegt … ",
   "sn3.11:5.3": "Die Widerstandskraft eines Menschen kann man im Unglück erkennen … ",
