--- a/translation/de/sabbamitta/sutta/dn/dn30_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn30_translation-de-sabbamitta.json
@@ -609,7 +609,7 @@
   "dn30:2.22.3": "Indem er diese Taten verübte, wurde er in einer himmlischen Welt wiedergeboren. ",
   "dn30:2.22.4": "Als er zu diesem Ort zurückkam, erlangte er diese beiden Kennzeichen: ",
   "dn30:2.22.5": "Seine Zunge ist lang und er hat die Stimme Brahmās, wie der Ruf des Kuckucks. ",
-  "dn30:2.23.1": "Da er diese Kennzeichen besitzt, wird er, wenn er zu Hause bleibt, ein Rad-drehender Herrscher werden. ",
+  "dn30:2.23.1": "Da er diese Kennzeichen besitzt, wird er, wenn er im Haus bleibt, ein Rad-drehender Herrscher werden. ",
   "dn30:2.23.2": "Und was gewinnt er, wenn er König ist? ",
   "dn30:2.23.3": "Er hat eine überzeugende Stimme. Seine Stimme überzeugt  Brahmanen und Hausbesitzer, Menschen aus Stadt und Land, Schatzmeister, Offiziere, Wachleute, Minister, Räte, Herrscher, Nutznießer von Steuern und Prinzen. ",
   "dn30:2.23.4": "Das gewinnt er, wenn er König ist. ",
