--- a/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
@@ -35,7 +35,7 @@
   "an2.25:1.3": "Einer, der eine Lehrrede, die der Auslegung bedarf, als eine Lehrrede darstellt, die der Auslegung bedarf. Und einer, der eine Lehrrede, deren Bedeutung offensichtlich ist, als eine Lehrrede darstellt, deren Bedeutung offensichtlich ist. ",
   "an2.25:1.4": "Diese beiden stellen den Klargewordenen richtig dar.“ ",
   "an2.26:1.0": "26 ",
-  "an2.26:1.1": "„Mönche und Nonnen, wenn man seine Verfehlungen verheimlicht, kann man eins von zwei Geschicken erwarten: ",
+  "an2.26:1.1": "„Mönche und Nonnen, wer unter der Hand handelt, kann eins von zwei Geschicken erwarten: ",
   "an2.26:1.2": "die Hölle oder das Tierreich. ",
   "an2.26:2.1": "Wenn man seine Verfehlungen nicht verheimlicht, kann man eins von zwei Geschicken erwarten: ",
   "an2.26:2.2": "die Götterwelt oder die Menschenwelt.“ ",
