Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
@@ -40,7 +40,7 @@
   "an2.26:2.1": "Wer offen und ehrlich handelt, kann eins von zwei Geschicken erwarten: ",
   "an2.26:2.2": "die Götterwelt oder die Menschenwelt.“ ",
   "an2.27:1.0": "27 ",
-  "an2.27:1.1": "„Mönche und Nonnen, wenn man falsche Ansicht hat, kann man eins von zwei Geschicken erwarten: ",
+  "an2.27:1.1": "„Mönche und Nonnen, wer falsche Ansicht hat, kann eins von zwei Geschicken erwarten: ",
   "an2.27:1.2": "die Hölle oder das Tierreich.“ ",
   "an2.28:1.0": "28 ",
   "an2.28:1.1": "„Wenn man rechte Ansicht hat, kann man eins von zwei Geschicken erwarten: ",
