--- a/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
@@ -43,7 +43,7 @@
   "an2.27:1.1": "„Mönche und Nonnen, wer falsche Ansicht hat, kann eins von zwei Geschicken erwarten: ",
   "an2.27:1.2": "die Hölle oder das Tierreich.“ ",
   "an2.28:1.0": "28 ",
-  "an2.28:1.1": "„Wenn man rechte Ansicht hat, kann man eins von zwei Geschicken erwarten: ",
+  "an2.28:1.1": "„Wer rechte Ansicht hat, kann eins von zwei Geschicken erwarten: ",
   "an2.28:1.2": "die Götterwelt oder die Menschenwelt.“ ",
   "an2.29:1.0": "29 ",
   "an2.29:1.1": "„Auf einen unmoralischen Menschen warten zwei Orte: ",
