--- a/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an2/an2.21-31_translation-de-sabbamitta.json
@@ -56,7 +56,7 @@
   "an2.30:1.3": "Der Gedanke, selbst hier und jetzt glücklich zu leben, und Anteilnahme für künftige Generationen. ",
   "an2.30:1.4": "Ich sehe diese beiden Gründe, um eine abgelegene Unterkunft in der Wildnis und im Wald aufzusuchen.“ ",
   "an2.31:1.0": "31 ",
-  "an2.31:1.1": "„Zwei Dinge spielen für das Klarwerden eine Rolle. ",
+  "an2.31:1.1": "„Zwei Dinge spielen für das Erkennen eine Rolle. ",
   "an2.31:1.2": "Welche zwei? ",
   "an2.31:1.3": "Sammlung und Klarsicht. ",
   "an2.31:1.4": "Welchen Segen bringt es, Sammlung zu entwickeln? ",
