--- a/translation/it/soma/sutta/kn/iti/vagga1/iti3_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti3_translation-it-soma.json
@@ -5,5 +5,5 @@
   "iti3:2.3": "E qual è questa cosa? ",
   "iti3:2.4": "L’illusione. ",
   "iti3:3.1": "“Confuse dall’illusione, ",
-  "iti3:3.3": "Quando si comprende correttamente l’illusione, "
+  "iti3:3.3": "Quando si comprende nel modo giusto  l’illusione, "
 }
