--- a/translation/it/soma/sutta/mn/mn136_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn136_translation-it-soma.json
@@ -123,7 +123,7 @@
   "mn136:15.5": "ma chiunque dica questo: ",
   "mn136:15.6": "‘chiunque abbia questo tipo di condotta morale e una corretta visione delle cose, rinasce in una buona destinazione*, in paradiso’ io non lo accetto. ",
   "mn136:15.7": "chiunque dica: ",
-  "mn136:15.8": "Chiunque conosce questo, conosce correttamente. Chi ha un’altra conoscenza, ha una conoscenza errata. ** io non lo accetto** ",
+  "mn136:15.8": "Chiunque conosce questo, conosce nel modo giusto . Chi ha un’altra conoscenza, ha una conoscenza errata. ** io non lo accetto** ",
   "mn136:15.9": "Quello che vi dico l’ho conosciuto, visto, e compreso di persona. ‘Solo questo è vero, tutto il resto è falso.’ ** io non lo accetto** ",
   "mn136:15.10": "Perchè questo? ",
   "mn136:15.11": "Perché la conoscenza del Buddha della grande analisi del kamma è diversa. ",
