--- a/translation/it/soma/sutta/mn/mn136_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn136_translation-it-soma.json
@@ -112,7 +112,7 @@
   "mn136:14.5": "ma chiunque dica questo: ",
   "mn136:14.6": "‘Chiunque abbia questo tipo di condotta immorale e una scorretta visione delle cose, con la distruzione del corpo, dopo la morte, rinasce in una buona destinazione*, in paradiso’ *** io non lo accetto**. ",
   "mn136:14.7": "chiunque dica: ",
-  "mn136:14.8": "‘Chiunque conosce questo, conosce correttamente. Chi ha un’altra conoscenza, ha una conoscenza errata. ** io non lo accetto** ",
+  "mn136:14.8": "‘Chiunque conosce questo, conosce nel modo giusto . Chi ha un’altra conoscenza, ha una conoscenza errata. ** io non lo accetto** ",
   "mn136:14.9": "Quello che vi dico l’ho conosciuto, visto, e compreso di persona. ‘Solo questo è vero, tutto il resto è falso.’ ** io non lo accetto** ",
   "mn136:14.10": "Perchè questo? ",
   "mn136:14.11": "Perché la conoscenza del Buddha della grande analisi del kamma è diversa. ",
