Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -27,7 +27,7 @@
   "sn22.89:10.1": "E' come l'odore di un loto blu, rosso, o bianco. ",
   "sn22.89:10.2": "Potrebbe uno correttamente parlare dell'odore del petalo, o dell'odore del colore, o dell'odore del pistillo? ",
   "sn22.89:10.3": "No ",
-  "sn22.89:10.4": "E quindi come dovreste rispondere correttamente? ",
+  "sn22.89:10.4": "E quindi come dovreste rispondere nel modo giusto ? ",
   "sn22.89:10.5": "l'odore del fiore, e' il modo corretto, ",
   "sn22.89:10.6": "per questo io non dico che 'sono' in relazione alla materia ..... ",
   "sn22.89:11.1": "Quando le cinque catene inferiori sono state abbandonate dal nobile discepolo, per quello allora e': \"riguardo le cinque cataste ardenti qualsiasi residuo di concezione io sono, desiderio io sono, tendenza io sono, non e' stato sradicato ",
