Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.100_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.100_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.100_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "an3.100:3.3": "Ein solcher Mensch begeht die gleiche geringfügige schlechte Tat, und er erfährt das Ergebnis in diesem Leben, ohne dass das Geringste übrig bleibt, und erst recht nicht viel. ",
   "an3.100:4.1": "Wie wenn ein Mensch ein Salzklümpchen in einen Becher Wasser werfen würde: ",
   "an3.100:4.2": "Was meint ihr, Mönche und Nonnen? ",
-  "an3.100:4.3": "Würde das Schälchen Wasser salzig und ungenießbar werden?“ ",
+  "an3.100:4.3": "Würde der Becher Wasser salzig und ungenießbar werden?“ ",
   "an3.100:4.4": "„Ja, Herr. ",
   "an3.100:4.5": "Warum ist das so? ",
   "an3.100:4.6": "Weil in dem Schälchen nur wenig Wasser ist.“ ",
