--- a/translation/de/sabbamitta/sutta/an/an3/an3.100_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.100_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "an3.100:4.3": "Würde der Becher Wasser salzig und ungenießbar werden?“ ",
   "an3.100:4.4": "„Ja, Herr. ",
   "an3.100:4.5": "Warum ist das so? ",
-  "an3.100:4.6": "Weil in dem Schälchen nur wenig Wasser ist.“ ",
+  "an3.100:4.6": "Weil in dem Becher nur wenig Wasser ist.“ ",
   "an3.100:4.7": "„Wie wenn ein Mensch ein Salzklümpchen in den Ganges werfen würde: ",
   "an3.100:4.8": "Was meint ihr, Mönche und Nonnen? ",
   "an3.100:4.9": "Würde der Ganges salzig und ungenießbar werden?“ ",
