Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga1/iti2_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga1/iti2_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti2_translation-it-soma.json
@@ -6,5 +6,5 @@
   "iti2:2.4": "L’odio.” ",
   "iti2:3.1": "“Corrotte dall’odio, ",
   "iti2:3.2": "le creature giungono a un cattivo destino. ",
-  "iti2:3.3": "Quando si comprende nel modo giusto  quell’odio, "
+  "iti2:3.3": "Quando si comprende correttamente (nel modo giusto)  quell’odio, "
 }
