Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -1,4 +1,5 @@
 {
   "thig6.1:0.1": "Стихи старших монахинь 6.1 ",
-  "thig6.1:0.2": "Шесть строф "
+  "thig6.1:0.2": "Шесть строф ",
+  "thig6.1:0.3": "Пятьсот тхери,учениц Патачары "
 }
