Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -3,5 +3,6 @@
   "thig6.1:0.2": "Шесть строф ",
   "thig6.1:0.3": "Пятьсот тхери,учениц Патачары ",
   "thig6.1:1.1": "Пути его ты не ведаешь —",
-  "thig6.1:1.2": "Откуда явился он и куда ушёл. "
+  "thig6.1:1.2": "Откуда явился он и куда ушёл. ",
+  "thig6.1:1.3": "Не зная, откуда он пришёл, рыдаешь: "
 }
