--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -4,5 +4,6 @@
   "thig6.1:0.3": "Пятьсот тхери,учениц Патачары ",
   "thig6.1:1.1": "Пути его ты не ведаешь —",
   "thig6.1:1.2": "Откуда явился он и куда ушёл. ",
-  "thig6.1:1.3": "Не зная, откуда он пришёл, рыдаешь: "
+  "thig6.1:1.3": "Не зная, откуда он пришёл, рыдаешь: ",
+  "thig6.1:1.4": "«О сын мой!». "
 }
