--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -7,5 +7,6 @@
   "thig6.1:1.3": "Не зная, откуда он пришёл, рыдаешь: ",
   "thig6.1:1.4": "«О сын мой!». ",
   "thig6.1:2.1": "Путь ведая, ",
-  "thig6.1:2.2": "Которым все приходят и уходят, "
+  "thig6.1:2.2": "Которым все приходят и уходят, ",
+  "thig6.1:2.3": "Рыдать не станешь ты, "
 }
