Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -8,5 +8,6 @@
   "thig6.1:1.4": "«О сын мой!». ",
   "thig6.1:2.1": "Путь ведая, ",
   "thig6.1:2.2": "Которым все приходят и уходят, ",
-  "thig6.1:2.3": "Рыдать не станешь ты, "
+  "thig6.1:2.3": "Рыдать не станешь ты, ",
+  "thig6.1:2.4": "Ведь такова природа всех живых. "
 }
