--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -10,5 +10,6 @@
   "thig6.1:2.2": "Которым все приходят и уходят, ",
   "thig6.1:2.3": "Рыдать не станешь ты, ",
   "thig6.1:2.4": "Ведь такова природа всех живых. ",
-  "thig6.1:3.1": "Без приглашенья он сюда явился, "
+  "thig6.1:3.1": "Без приглашенья он сюда явился, ",
+  "thig6.1:3.2": "Без разрешенья он ушёл отсюда, "
 }
