Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -13,5 +13,6 @@
   "thig6.1:3.1": "Без приглашенья он сюда явился, ",
   "thig6.1:3.2": "Без разрешенья он ушёл отсюда, ",
   "thig6.1:3.3": "Откуда же он странствует, ",
-  "thig6.1:3.4": "Кто знает, надолго ли останется тут? "
+  "thig6.1:3.4": "Кто знает, надолго ли останется тут? ",
+  "thig6.1:3.5": "Одной придя тропою, "
 }
