Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -15,5 +15,6 @@
   "thig6.1:3.3": "Откуда же он странствует, ",
   "thig6.1:3.4": "Кто знает, надолго ли останется тут? ",
   "thig6.1:3.5": "Одной придя тропою, ",
-  "thig6.1:3.6": "Покинет это место он другою. "
+  "thig6.1:3.6": "Покинет это место он другою. ",
+  "thig6.1:4.1": "Придя сюда в обличье человека, "
 }
