Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -17,5 +17,6 @@
   "thig6.1:3.5": "Одной придя тропою, ",
   "thig6.1:3.6": "Покинет это место он другою. ",
   "thig6.1:4.1": "Придя сюда в обличье человека, ",
-  "thig6.1:4.2": "Продолжит он скитаться. "
+  "thig6.1:4.2": "Продолжит он скитаться. ",
+  "thig6.1:4.3": "Как родился, так и скончался: "
 }
