--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -19,5 +19,6 @@
   "thig6.1:4.1": "Придя сюда в обличье человека, ",
   "thig6.1:4.2": "Продолжит он скитаться. ",
   "thig6.1:4.3": "Как родился, так и скончался: ",
-  "thig6.1:4.4": "О чём же тут скорбеть? "
+  "thig6.1:4.4": "О чём же тут скорбеть? ",
+  "thig6.1:5.1": "Вырвана эта стрела, "
 }
