Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -20,5 +20,6 @@
   "thig6.1:4.2": "Продолжит он скитаться. ",
   "thig6.1:4.3": "Как родился, так и скончался: ",
   "thig6.1:4.4": "О чём же тут скорбеть? ",
-  "thig6.1:5.1": "Вырвана эта стрела, "
+  "thig6.1:5.1": "Вырвана эта стрела, ",
+  "thig6.1:5.2": "Которую так трудно узреть, <j>Вонзённая мне в грудь. "
 }
