Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -24,5 +24,6 @@
   "thig6.1:5.2": "Которую так трудно узреть, <j>Вонзённая мне в грудь. ",
   "thig6.1:5.3": "Была я безутешна, скорбя по сыну, ",
   "thig6.1:5.4": "Сейчас вся скорбь моя исчезла. ",
-  "thig6.1:6.1": "С вырванною из сердца стрелою, "
+  "thig6.1:6.1": "С вырванною из сердца стрелою, ",
+  "thig6.1:6.2": "Страстей лишённая, "
 }
