Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -25,5 +25,6 @@
   "thig6.1:5.3": "Была я безутешна, скорбя по сыну, ",
   "thig6.1:5.4": "Сейчас вся скорбь моя исчезла. ",
   "thig6.1:6.1": "С вырванною из сердца стрелою, ",
-  "thig6.1:6.2": "Страстей лишённая, <j>Достигшая Ниббаны, "
+  "thig6.1:6.2": "Страстей лишённая, <j>Достигшая Ниббаны, ",
+  "thig6.1:6.3": "Прибежище приняла я в Будде, мудреце, "
 }
