Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.1_translation-ru-narinyanievmenenko.json
@@ -27,5 +27,6 @@
   "thig6.1:6.1": "С вырванною из сердца стрелою, ",
   "thig6.1:6.2": "Страстей лишённая, <j>Достигшая Ниббаны, ",
   "thig6.1:6.3": "Прибежище приняла я в Будде, мудреце, ",
-  "thig6.1:6.4": "В Дхамме и Сангхе. "
+  "thig6.1:6.4": "В Дхамме и Сангхе. ",
+  "thig6.1:7.1": "Каждая из пятисот тхери произнесла такие строфы. "
 }
