--- a/translation/it/soma/sutta/sn/sn46/sn46.2_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn46/sn46.2_translation-it-soma.json
@@ -1,3 +1,4 @@
 {
-  "sn46.2:1.2": "Cercatori, come questo corpo è sostenuto dal nutrimento, persiste dipendente dal nutrimento, non persiste senza nutrimento "
+  "sn46.2:1.2": "Cercatori, come questo corpo è sostenuto dal nutrimento, persiste dipendente dal nutrimento, non persiste senza nutrimento ",
+  "sn46.2:1.3": "allo steso modo i cinque ostacoli sono sostenuti dal nutrimento, persistono dipendenti dal nutrimento, non persistono senza nutrimento. "
 }
