--- a/translation/it/soma/sutta/sn/sn46/sn46.2_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn46/sn46.2_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "sn46.2:1.2": "Cercatori, come questo corpo è sostenuto dal nutrimento, persiste dipendente dal nutrimento, non persiste senza nutrimento ",
   "sn46.2:1.3": "allo stesso modo i cinque ostacoli sono sostenuti dal nutrimento, persistono dipendenti dal nutrimento, non persistono senza nutrimento. ",
-  "sn46.2:2.1": "E qual è il nutrimento che fa sorgere il desiderio sensuale che non è ancora sorto, e quello sorto che fa crescere ed espandere quello che è già sorto? ",
+  "sn46.2:2.1": "E qual è il nutrimento che fa sorgere il desiderio sensuale che non è ancora sorto, e quello che fa crescere ed espandere quello che è già sorto? ",
   "sn46.2:2.2": "Il segno del bello. ",
   "sn46.2:2.3": "Quando non si ponderano bene le cose di frequente (non si usa la mente con ponderazione frequentemente), "
 }
