Translations by ayyasoma to translation/it/soma/sutta/sn/sn46/sn46.2_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn46/sn46.2_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn46/sn46.2_translation-it-soma.json
@@ -7,5 +7,6 @@
   "sn46.2:2.4": "questo è il nutrimento che fa sorgere il desiderio sensuale che non è ancora sorto, e che fa crescere ed espandere quello che è già sorto. ",
   "sn46.2:3.1": "E qual è il nutrimento che fa sorgere l’irritazione (ostilità) che non è ancora sorta, e quello che fa crescere ed espandere quella che è già sorto? ",
   "sn46.2:3.2": "Il segno dell’avversione. ",
+  "sn46.2:3.3": "Quando non si ponderano bene le cose di frequente ",
   "sn46.2:4.1": "E qual è il nutrimento che fa sorgere l’indolenza e il torpore che non sono ancora sorte, e quello che fa crescere ed espandere quelle che sone già sorte? "
 }
