Translations by ayyasoma to translation/it/soma/sutta/sn/sn46/sn46.51_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn46/sn46.51_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn46/sn46.51_translation-it-soma.json
@@ -1,4 +1,5 @@
 {
   "sn46.51:2.1": "E qual è il nutrimento che fa sorgere l’avversione che non è ancora sorta, e quello che fa crescere ed espandere quella che è già sorta? ",
-  "sn46.51:2.2": "Il segno dell’irritazione (ostilità) "
+  "sn46.51:2.2": "Il segno dell’irritazione (ostilità) ",
+  "sn46.51:2.3": "Il non ponderare bene le cose di frequente (non si usa la mente con ponderazione frequentemente), "
 }
