--- a/translation/it/soma/sutta/sn/sn46/sn46.51_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn46/sn46.51_translation-it-soma.json
@@ -2,5 +2,6 @@
   "sn46.51:2.1": "E qual è il nutrimento che fa sorgere l’avversione che non è ancora sorta, e quello che fa crescere ed espandere quella che è già sorta? ",
   "sn46.51:2.2": "Il segno dell’irritazione (ostilità) ",
   "sn46.51:2.3": "Il non ponderare bene le cose di frequente (non si usa la mente con ponderazione frequentemente), ",
-  "sn46.51:2.4": "è il nutrimento che fa sorgere l’avversione che non è ancora sorta, e che fa crescere ed espandere quello che è già sorta. "
+  "sn46.51:2.4": "è il nutrimento che fa sorgere l’avversione che non è ancora sorta, e che fa crescere ed espandere quello che è già sorta. ",
+  "sn46.51:14.1": "E qual è il non nutrimento che fa sorgere l’avversione che non è ancora sorta, e quello che fa crescere ed espandere quella che è già sorto? "
 }
