--- a/translation/it/soma/sutta/kn/iti/vagga9/iti82_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti82_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti82:4.2": "‘Questo nobile discepolo ha vinto la battaglia, ed è uno che regna vittorioso in prima linea.’ ",
   "iti82:5.1": "Avendolo visto vincere in battaglia, ",
   "iti82:5.2": "i Deva rendono omaggio ",
-  "iti82:5.3": "al discepolo del Buddha perfettamente risvegliato e ",
+  "iti82:5.3": "al discepolo del Buddha perfettamente risvegliato ",
   "iti82:5.4": "alla sua grande maestria. ",
   "iti82:6.1": "‘Ode al purosangue! ",
   "iti82:6.2": "Hai vinto una battaglia difficile da vincere! ",
