--- a/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
@@ -6,7 +6,7 @@
   "iti49:1.1": "Aš girdėjau, kad taip tikrai bylojo Palaimintasis, taip bylojo _Arahantas_: ",
   "iti49:2.1": "„Vienuoliai, laikydamiesi dvejų pažiūrų vieni dėvai ir žmonės užstringa, kiti eina per toli, ir tik turintieji akis mato. ",
   "iti49:3.1": "Ir kaip, vienuoliai, vieni užstringa? ",
-  "iti49:3.2": "Vienuoliai, kai dievybėms ir žmonėms, kurie žavisi būtimi, gėrisi būtimi, džiaugiasi būtimi, dėstomas mokymas vedantis į būties baigtį, jų protas nepajuda link jo, nepatiki juo, nenusistovi ties juo, neįsitvirtina jame. ",
+  "iti49:3.2": "Vienuoliai, kai dievybėms ir žmonėms, kurie žavisi tapsmu, gėrisi tapsmu, džiaugiasi tapsmu, dėstomas mokymas vedantis į tapsmo baigtį, jų protas nepajuda link jo, nepatiki juo, nenusistovi ties juo, neįsitvirtina jame. ",
   "iti49:3.3": "Štai taip, vienuoliai, vieni užstringa. ",
   "iti49:4.1": "Ir kaip, vienuoliai, kiti eina per toli? ",
   "iti49:4.2": "Yra gi tokie, kuriuos būtis vargina, kuriems ji kelia gėdą ir pasibjaurėjimą, juos džiugina (mintys apie) nebūtį: ",
