--- a/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
@@ -9,7 +9,7 @@
   "iti49:3.2": "Vienuoliai, kai dievybėms ir žmonėms, kurie žavisi tapsmu, gėrisi tapsmu, džiaugiasi tapsmu, dėstomas mokymas vedantis į tapsmo baigtį, jų protas nepajuda link jo, nepatiki juo, nenusistovi ties juo, neįsitvirtina jame. ",
   "iti49:3.3": "Štai taip, vienuoliai, vieni užstringa. ",
   "iti49:4.1": "Ir kaip, vienuoliai, kiti eina per toli? ",
-  "iti49:4.2": "Yra gi tokie, kuriuos būtis vargina, kuriems ji kelia gėdą ir pasibjaurėjimą, juos džiugina (mintys apie) nebūtį: ",
+  "iti49:4.2": "Yra gi tokie, kuriuos tapsmas vargina, kuriems jis kelia gėdą ir pasibjaurėjimą, juos džiugina (mintys apie) nebūtį: ",
   "iti49:4.3": "„Mielieji, kai ši savastis (būtybė) po kūno žūties, po mirties pranyksta, pradingsta, nebeegzistuoja, ",
   "iti49:4.4": "tai ramybė, tai aukščiausia, tai tikra.” ",
   "iti49:4.5": "Štai taip, vienuoliai, kiti eina per toli. ",
