--- a/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
@@ -14,7 +14,7 @@
   "iti49:4.4": "tai ramybė, tai aukščiausia, tai tikra.” ",
   "iti49:4.5": "Štai taip, vienuoliai, kiti eina per toli. ",
   "iti49:5.1": "Ir kaip, vienuoliai, turintieji akis mato? ",
-  "iti49:5.2": "Štai, vienuolis mato tai kas egzistuoja, kaip egzistuojantį. ",
+  "iti49:5.2": "Štai, vienuolis mato tai kas tapo tapusiu. ",
   "iti49:5.3": "Pamatęs tai kas egzistuoja, kaip egzistuojantį, jis žengia keliu vedančiu į nusivylimą tuo kas egzistuoja, į aistros išblėsimą, į baigtį. ",
   "iti49:5.4": "Štai taip, vienuoliai, turintieji akis mato.” ",
   "iti49:5.5": "Apie tai Palaimintasis kalbėjo. ",
