Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
@@ -20,7 +20,7 @@
   "iti49:5.5": "Apie tai Palaimintasis kalbėjo. ",
   "iti49:5.6": "Taip pasakyta apie tai: ",
   "iti49:6.1": "„Pamatę tai kas tapo, tapusiu, ",
-  "iti49:6.2": "peržengę tai, kas egzistuoja, ",
+  "iti49:6.2": "peržengę tai, kas tapo, ",
   "iti49:6.3": "nuo egzistuojančio jie išsivaduoja ",
   "iti49:6.4": "sunaikinę troškimą būti. ",
   "iti49:7.1": "Kas visiškai suprato tai, kas egzistuoja, ",
