--- a/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
@@ -22,7 +22,7 @@
   "iti49:6.1": "„Pamatę tai kas tapo, tapusiu, ",
   "iti49:6.2": "peržengę tai, kas tapo, ",
   "iti49:6.3": "nuo tapusio jie išsivaduoja ",
-  "iti49:6.4": "sunaikinę troškimą būti. ",
+  "iti49:6.4": "sunaikinę troškimą tapti. ",
   "iti49:7.1": "Kas visiškai suprato tai, kas egzistuoja, ",
   "iti49:7.2": "neturi troškimo nei būti, nei nebūti. ",
   "iti49:7.3": "O kai tai, kas egzistuoja išnyksta, tas vienuolis ",
