--- a/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
@@ -23,7 +23,7 @@
   "iti49:6.2": "peržengę tai, kas tapo, ",
   "iti49:6.3": "nuo tampančio jie išsivaduoja ",
   "iti49:6.4": "sunaikinę troškimą tapti. ",
-  "iti49:7.1": "Kas visiškai suprato tai, kas egzistuoja, ",
+  "iti49:7.1": "Kas visiškai suprato tai, kas tampa, ",
   "iti49:7.2": "neturi troškimo nei būti, nei nebūti. ",
   "iti49:7.3": "O kai tai, kas egzistuoja išnyksta, tas vienuolis ",
   "iti49:7.4": "negrįžta pakartotinai į būtį.” ",
