Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga5/iti49_translation-lt-piyadassi.json
@@ -25,7 +25,7 @@
   "iti49:6.4": "sunaikinę troškimą tapti. ",
   "iti49:7.1": "Kas visiškai suprato tai, kas tampa, ",
   "iti49:7.2": "neturi troškimo nei tapti, nei netapti. ",
-  "iti49:7.3": "O kai tai, kas egzistuoja išnyksta, tas vienuolis ",
+  "iti49:7.3": "O kai tai, kas tampa išnyksta, tas vienuolis ",
   "iti49:7.4": "negrįžta pakartotinai į būtį.” ",
   "iti49:8.1": "Apie tai taip pat Palaimintasis kalbėjo. Taip aš girdėjau. "
 }
