--- a/translation/it/soma/sutta/kn/iti/vagga2/iti20_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga2/iti20_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti20:2.2": "‘se questa persona dovesse morire in questo momento, in tale condizione, cadrebbe all’inferno come se fosse trascinata (portata) là.’ ",
   "iti20:2.3": "Perché questo? ",
   "iti20:2.4": "Proprio perché la mente è corrotta. ",
-  "iti20:2.5": "A causa della corruzione della mente, alcune creature dopo la morte, con la disintegrazione del corpo, rinascono in un cattivo destino, di perdizione, di dannazione, all’inferno.    /// [uno stato di perdizione*, di sventura (cattivo destino)*, di dannazione*, all’inferno.”] ",
+  "iti20:2.5": "A causa della corruzione della mente, alcune creature dopo la morte, quando il corpo perisce, rinascono in un cattivo destino, di perdizione, di dannazione, all’inferno.    /// [uno stato di perdizione*, di sventura (cattivo destino)*, di dannazione*, all’inferno.”] ",
   "iti20:2.6": "Il Buddha disse questo. ",
   "iti20:2.7": "A tal proposito si dice: ",
   "iti20:3.1": "“Avendo inteso la mente ",
