Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti1:2.6": "Il Buddha disse questo. ",
   "iti1:2.7": "A tal proposito si dice: ",
   "iti1:3.1": "“Divorate dall’avidità, ",
-  "iti1:3.2": "le creature giungono a un cattivo destino. ",
+  "iti1:3.2": "le creature giungono a una cattiva destinazione (cattivo destino). ",
   "iti1:3.3": "Quando si comprende correttamente (nel modo giusto ) quella avidità, ",
   "iti1:3.4": "vedendo chiaramente la si abbandona. ",
   "iti1:3.5": "Una volta che la si ha abbandonata, non si ritorna ",
