--- a/translation/it/soma/sutta/mn/mn7_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn7_translation-it-soma.json
@@ -7,7 +7,7 @@
   "mn7:2.2": "e un pittore lo tingesse di blu, giallo, rosso o carminio: uscirebbe fuori un colore sbiadito e impuro. ",
   "mn7:2.3": "Perché questo? ",
   "mn7:2.4": "Per via dell’impurità del tessuto. ",
-  "mn7:2.5": "Allo stesso modo, se il cuore è macchiato ci si può aspettare un cattivo destino. ",
+  "mn7:2.5": "Allo stesso modo, se il cuore è macchiato ci si può aspettare una cattiva destinazione (cattivo destino). ",
   "mn7:2.6": "Ma se un tessuto fosse pulito e limpido ",
   "mn7:2.7": "e un pittore lo tingesse di blu, giallo, rosso o carminio, quel colore uscirebbe brillante e puro. ",
   "mn7:2.8": "Perchè questo? ",
