Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga2/iti20_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga2/iti20_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga2/iti20_translation-it-soma.json
@@ -17,5 +17,5 @@
   "iti20:5.1": "Come ci si comporta, così si va avanti: ",
   "iti20:5.2": "per questo motivo, ",
   "iti20:5.3": "a causa della corruzione mentale, ",
-  "iti20:5.4": "le creature giungono a un cattivo destino.* "
+  "iti20:5.4": "le creature giungono a una cattiva destinazione (cattivo destino).* "
 }
