--- a/translation/it/soma/sutta/kn/iti/vagga5/iti41_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga5/iti41_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti41:2.1": "“Cercatori, le creature sono davvero povere, quando sono prive di nobile saggezza. ",
   "iti41:2.2": "Vivono infelici in questa vita con tormento, ansia e angoscia. ",
-  "iti41:2.3": "Dopo la morte, quando il corpo perisce, ci si può aspettare un cattivo destino. ",
+  "iti41:2.3": "Dopo la morte, quando il corpo perisce, ci si può aspettare una cattiva destinazione (cattivo destino). ",
   "iti41:2.4": "Le creature non sono povere, quando non sono prive di nobile saggezza. ",
   "iti41:2.5": "Vivono felici in questa vita senza tormento, ansia e angoscia. ",
   "iti41:2.6": "Dopo la morte, quando il corpo perisce, ci si può aspettare un buon destino.” ",
