--- a/translation/it/soma/sutta/kn/iti/vagga5/iti40_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga5/iti40_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti40:2.2": "La conoscenza precede (apre la strada al) l’acquisizione di qualità benefiche, e ne segue l’avere ritegno e timore.” ",
   "iti40:2.3": "Il Buddha disse questo. ",
   "iti40:2.4": "A tal proposito si dice: ",
-  "iti40:3.1": "“Qualsiasi cattivo destino (sventura?*) ",
+  "iti40:3.1": "“Qualsiasi cattiva destinazione (cattivo destino) (sventura?*) ",
   "iti40:3.2": "in questo mondo e nell’altro, [which realm???] ",
   "iti40:3.3": "ha radici nell’ignoranza, ",
   "iti40:3.4": "in un ammasso di desideri e avidità. ",
