Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
@@ -34,7 +34,7 @@
   "iti83:16.2": "dì molte parole buone** ",
   "iti83:16.3": "e pensa cose buone!** ",
   "iti83:16.4": "Con il sostegno di questo patrimonio spirituale ",
-  "iti83:17.1": "illimitato e incommensurabile ",
+  "iti83:17.1": "illimitato e incommensurabile /merito che porta alla rinascita ",
   "iti83:17.2": "reso così immane da atti di generosità, ",
   "iti83:17.3": "altri esseri mortali ",
   "iti83:17.4": "nel buon Dhamma e nella vita religiosa.’ ",
