Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti72:2.1": "Cercatori, ci sono queste tre vie d’uscita. ",
   "iti72:2.2": "Quali tre? ",
-  "iti72:2.3": "La via d’uscita (di fuga) dai piaceri dei sensi, ovvero la rinuncia; la via d’uscita dalle forme, ovvero l’amorfo [dalla materialità, ovvero l’immateriale (dalle forme fisiche, ovvero l’immaterialità / amorfo)]; la via d’uscita da quello che è divenuto, creato, sorto in dipendenza, ovvero la cessazione. (qualsiasi cosa che è venuta in essere, creata, sorta in dipendenza, ovvero la cessazione. ) ",
+  "iti72:2.3": "La via d’uscita (di fuga) dai piaceri dei sensi, ovvero la rinuncia; la via d’uscita dalla materialità, ovvero l’immateriale; la via d’uscita da quello che è divenuto, creato, sorto in dipendenza, ovvero la cessazione. ",
   "iti72:3.1": "Avendo conosciuto la via di fuga (d’uscita) dai piaceri dei sensi ",
   "iti72:3.2": "e trascendendo la forma fisica (materialità), ",
   "iti72:3.3": "chi è ardente tocca/sperimenta sempre ",
