Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -1,5 +1,6 @@
 {
   "thig6.2:0.1": "Стихи старших монахинь 6.2 ",
   "thig6.2:0.2": "Шесть строф ",
-  "thig6.2:0.3": " Васеттхи Тхери "
+  "thig6.2:0.3": " Васеттхи Тхери ",
+  "thig6.2:1.1": "Горем по сыну сокрушённая, "
 }
