Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -8,5 +8,6 @@
   "thig6.2:1.4": "Бродила тут и там я. ",
   "thig6.2:2.1": "Три года на обочинах дорог жила, ",
   "thig6.2:2.2": "На грудах мусора, ",
-  "thig6.2:2.3": "На кладбищах, "
+  "thig6.2:2.3": "На кладбищах, ",
+  "thig6.2:2.4": "Терзаемая голодом и жаждой. "
 }
