Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -11,5 +11,6 @@
   "thig6.2:2.3": "На кладбищах, ",
   "thig6.2:2.4": "Терзаемая голодом и жаждой. ",
   "thig6.2:3.1": "И вот узрела я Сугату в граде Митхиле, ",
-  "thig6.2:3.2": "Кто укрощает тех, кто не обуздан прежде был, "
+  "thig6.2:3.2": "Кто укрощает тех, кто не обуздан прежде был, ",
+  "thig6.2:3.3": "В совершенстве Пробуждённого, "
 }
