Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -13,5 +13,6 @@
   "thig6.2:3.1": "И вот узрела я Сугату в граде Митхиле, ",
   "thig6.2:3.2": "Кто укрощает тех, кто не обуздан прежде был, ",
   "thig6.2:3.3": "В совершенстве Пробуждённого, ",
-  "thig6.2:3.4": "Лишённого всех страхов. "
+  "thig6.2:3.4": "Лишённого всех страхов. ",
+  "thig6.2:4.1": "Я, просветлев умом, "
 }
