Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -15,5 +15,6 @@
   "thig6.2:3.3": "В совершенстве Пробуждённого, ",
   "thig6.2:3.4": "Лишённого всех страхов. ",
   "thig6.2:4.1": "Я, просветлев умом, ",
-  "thig6.2:4.2": "Ему воздала почести, присела рядом. "
+  "thig6.2:4.2": "Ему воздала почести, присела рядом. ",
+  "thig6.2:4.3": "Он в Дхамме наставлял меня "
 }
