Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.2_translation-ru-narinyanievmenenko.json
@@ -19,5 +19,6 @@
   "thig6.2:4.3": "Он в Дхамме наставлял меня ",
   "thig6.2:4.4": "Из сострадания — Готама. ",
   "thig6.2:5.1": "Услышав Дхамму, ",
-  "thig6.2:5.2": "Я в скитания ушла. "
+  "thig6.2:5.2": "Я в скитания ушла. ",
+  "thig6.2:5.3": "Словам Учителя внимая, "
 }
