Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
@@ -14,5 +14,6 @@
   "thig6.3:3.2": "Совокупности — плахе палача. ",
   "thig6.3:3.3": "Что именуешь радостями ты —",
   "thig6.3:3.4": "Уже давно не радость для меня. ",
-  "thig6.3:4.1": "Всё наслаждение сокрушено, "
+  "thig6.3:4.1": "Всё наслаждение сокрушено, ",
+  "thig6.3:4.2": "Пучина тьмы рассеяна, "
 }
