Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
@@ -16,5 +16,6 @@
   "thig6.3:3.4": "Уже давно не радость для меня. ",
   "thig6.3:4.1": "Всё наслаждение сокрушено, ",
   "thig6.3:4.2": "Пучина тьмы рассеяна, ",
-  "thig6.3:4.3": "Об этом зная, тебя я одолела, Лютый! "
+  "thig6.3:4.3": "Об этом зная, тебя я одолела, Лютый! ",
+  "thig6.3:5.1": "Я поклонялась звёздам и огню в лесу, "
 }
