Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
@@ -18,5 +18,6 @@
   "thig6.3:4.2": "Пучина тьмы рассеяна, ",
   "thig6.3:4.3": "Об этом зная, тебя я одолела, Лютый! ",
   "thig6.3:5.1": "Я поклонялась звёздам и огню в лесу, ",
-  "thig6.3:5.3": "Не зная всех явлений такими, какие есть они. "
+  "thig6.3:5.3": "Не зная всех явлений такими, какие есть они. ",
+  "thig6.3:5.4": "Я неразумною была, "
 }
