Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
@@ -20,5 +20,6 @@
   "thig6.3:5.1": "Я поклонялась звёздам и огню в лесу, ",
   "thig6.3:5.3": "Не зная всех явлений такими, какие есть они. ",
   "thig6.3:5.4": "Я неразумною была, <j>Но мнила: «Это — чистота». ",
-  "thig6.3:6.1": "Теперь я поклоняюсь в совершенстве Пробуждённому, "
+  "thig6.3:6.1": "Теперь я поклоняюсь в совершенстве Пробуждённому, ",
+  "thig6.3:6.2": "Высшему среди людей; "
 }
