Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.3_translation-ru-narinyanievmenenko.json
@@ -22,5 +22,6 @@
   "thig6.3:5.4": "Я неразумною была, <j>Но мнила: «Это — чистота». ",
   "thig6.3:6.1": "Теперь я поклоняюсь в совершенстве Пробуждённому, ",
   "thig6.3:6.2": "Высшему среди людей; ",
-  "thig6.3:6.3": "Ото всех страданий освобождена, "
+  "thig6.3:6.3": "Ото всех страданий освобождена, ",
+  "thig6.3:6.4": "Исполнившая его наставления. "
 }
