Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
@@ -13,7 +13,7 @@
   "iti84:5.1": "“Il primo maestro nel mondo è il grande rishi, ",
   "iti84:5.2": "poi il discepolo che si è completato (evoluto/coltivato) ",
   "iti84:5.3": "e infine dall’apprendista ancora in cammino, ",
-  "iti84:5.4": "molto esperto, che segue precetti e osservanze. ",
+  "iti84:5.4": "molto istruito, che segue precetti e osservanze. ",
   "iti84:6.1": "Questi tre, migliori tra i Deva e gli esseri umani, ",
   "iti84:6.2": "sono portatori di luce che divulgano il Dhamma ",
   "iti84:6.3": "aprono le porte dell’immortalità, ",
