Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
@@ -15,7 +15,7 @@
   "iti84:5.3": "e infine l’apprendista ancora in cammino, ",
   "iti84:5.4": "molto istruito, che segue precetti e osservanze. ",
   "iti84:6.1": "Questi tre, migliori tra i Deva e gli esseri umani, ",
-  "iti84:6.2": "sono portatori di luce, parlano di Dhamma ",
+  "iti84:6.2": "sono apportatori di luce, parlano di Dhamma ",
   "iti84:6.3": "aprono le porte dell’immortalità, ",
   "iti84:6.4": "affrancano* molta gente** dal giogo. ",
   "iti84:7.1": "Quelli che grazie a una eccezionale guida ",
