Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thag/thag4.4_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thag/thag4.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag4.4_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "thag4.4:2.2": "schau nicht auf die Klargewordenen herab. ",
   "thag4.4:2.3": "Sie sind nicht einmal vom Himmel berauscht, ",
   "thag4.4:2.4": "geschweige denn von Menschen. ",
-  "thag4.4:3.1": "Doch die, die dumme Toren sind, ",
+  "thag4.4:3.1": "Doch die, die Toren und Dummköpfe sind, ",
   "thag4.4:3.2": "mit schlechten Ratgebern, in Täuschung gehüllt, ",
   "thag4.4:3.3": "diese Art Menschen ist von Körpern berauscht, ",
   "thag4.4:3.4": "wenn Māra seine Falle gelegt hat. ",
