Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/dhp/dhp60-75_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/dhp/dhp60-75_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/dhp/dhp60-75_translation-de-sabbamitta.json
@@ -26,7 +26,7 @@
   "dhp65:2": "und sei es nur für eine Weile, ",
   "dhp65:3": "wird er rasch die Lehre erkennen, ",
   "dhp65:4": "wie die Zunge den Geschmack der Suppe. ",
-  "dhp66:1": "Dumme Toren verhalten sich ",
+  "dhp66:1": "Toren und Dummköpfe verhalten sich ",
   "dhp66:2": "wie ihre eigenen schlimmsten Feinde; ",
   "dhp66:3": "sie tun schlechte Taten, ",
   "dhp66:4": "die als bittere Frucht reifen. ",
