Translations by sabbamitta to translation/de/site/name/sutta/dn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/dn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/dn-name_translation-de-site.json
@@ -14,7 +14,7 @@
   "dn-name:13.dn12": "Mit Lohicca ",
   "dn-name:14.dn13": "In den drei Veden bewandert ",
   "dn-name:15.dn-mahavagga": "Das große Kapitel ",
-  "dn-name:16.dn14": "Die große Lehrrede über die Ernte aus den Taten ",
+  "dn-name:16.dn14": "Die große Lehrrede über hinterlassene Spuren ",
   "dn-name:17.dn15": "Die große Lehrrede über das Kausalprinzip ",
   "dn-name:18.dn16": "Die große Lehrrede vom Erlöschen des Buddha ",
   "dn-name:19.dn17": "Der König Mahāsudassana ",
